--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,8 +22,8 @@
   }
 }
 [data-theme="dark"] .header {
-  background: rgba(16, 20, 24, 0.85);
-  background: #1a1a1a85;
+
+  background: #14141388;
 }
 
 .nav {
