--- a/src/components/Hero/HowItWorks.module.scss
+++ b/src/components/Hero/HowItWorks.module.scss
@@ -11,6 +11,7 @@
   font-weight: 800;
   margin-bottom: 3rem;
   // color: #111827;
+  font-family: var(--font-jetbrains);
 }
 
 .grid {
@@ -54,8 +55,8 @@
   font-size: 1.1rem;
   font-weight: 700;
   margin-bottom: 0.5rem;
-  // font-family: var(--font-jetbrains);
-  letter-spacing: -1%;
+  font-family: var(--font-jetbrains);
+  letter-spacing: -2%;
 }
 
 
