--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -48,6 +48,7 @@
   // --background: #0a0a0a;
   --background: #101218;
   --background: #1a1a1a;
+  --background: #141413;
   --foreground: rgba(255, 255, 255, 1.0);
   --bg-secondary: var(--background);
   
